@@ -1,5 +1,5 @@
 
-#ifdef 0
+#if !defined(COOLOS)
 #define debugC debug
 #else
 inline void debugC(const char *,...) {};
